# ComfyUI-Angelo

./: .gitattributes  .gitignore  README.md  __init__.py  angelo_nodes.py  angelo_segment.py  install_sam3_support.bat  install_sam3_support.sh  pyproject.toml  sam3_requirements.txt
.github/workflows/: publish.yml
web/: angelo.js
workflows/: Klein9b-example-image-to-image.json  Klein9b-example.json  Qwen Edit 2511 example.json
