[project]
name = "comfyui-angelo"
description = "Click-to-refine sampler for ComfyUI. Generate an image, then click or paint regions to refine just those areas — first-class support for FLUX 2 Klein 9B and Qwen-Image-Edit, plus any sampler-compatible model. Includes Xtra-Fine, Smart Inpaint, Smart Guided Inpaint, Re-roll, optional SAM 3 Detect, and a companion Overrides node for custom samplers."
version = "1.6.4"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/shootthesound/ComfyUI-Angelo"
Issues = "https://github.com/shootthesound/ComfyUI-Angelo/issues"

[tool.comfy]
PublisherId = "shootthesound"
DisplayName = "ComfyUI-Angelo"
Icon = "https://avatars.githubusercontent.com/u/110498357?v=4"
